--- a/ThesisReport/abstract.tex
+++ b/ThesisReport/abstract.tex
@@ -14,11 +14,11 @@ are two of the most popular and widely used evaluation systems through which a s
 to others. 
 However, both of these models take a general approach towards evaluating the methods, that is, they 
 have not been designed with an eye to the particular target application.
-In our proposed approach, steps are taken towards an evaluation design based on the potential applications of stereo methods, 
-which results in better definition and adjustment of the criteria for \textit{efficiency} and 
-\textit{the best correspondence matches} while doing the evaluation.
+In our proposed approach, steps are taken towards an evaluation design based on the potential applications of stereo methods.
+Considering the target application while evaluating the methods enables us to better define the criteria for \textit{efficiency}, that is, the processing time, 
+and the required accuracy of the disparity results.
 Since AR has attracted more attention in the past few years, 
-the evaluation scheme proposed in this research is designed based on outdoor AR applications which take advantage of
-stereo vision techniques to obtain a depth map of the surrounding environment. This map will then be used to
-integrate virtual objects in the scene that respect the occlusion property and the depth of the real objects. 
+the evaluation scheme proposed in this research is designed based on outdoor AR applications which take can advantage of
+stereo vision techniques to obtain a depth map of the surrounding environment. This map can be used to
+integrate virtual objects in the scene that respect the occlusion effects that are expected to occur based on the depth of the real objects. 
 
