--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -195,7 +195,7 @@ These algorithms are:
 SGBM is now integrated in the Open Source Computer Vision Library (OpenCV) \cite{sgbm} and, therefore, we have used this implementation
 in our evaluation.
 On the other hand, since no implementation of ADCensus is available in the public vision libraries, we have used our own implementation of it 
-which we refer to as ADCensusB in this report.
+which we refer to as ADCensusB in this thesis.
 Although ADCensus is originally proposed as a GPU-based solution, we have used the CPU implementation of it in our evaluation, as no public GPU-implementation was also available.
 
 SGBM is selected as it has shown to generate acceptable results within 1-2 seconds on the typical test images \cite{hir08}; moreover,
