--- a/ThesisReport/ack.tex
+++ b/ThesisReport/ack.tex
@@ -5,7 +5,7 @@
 
 \vspace{1cm}
 
-Foremost, I would like to express my sincere gratitude to my supervisor, Dr. Oscar Meruvia-Pastor, for his continuous support, motivation, insightful advice and 
+Foremost, I would like to express my sincere gratitude to my supervisor, Dr. Oscar Meruvia-Pastor, for his continuous support, motivation, and 
 kind guidance throughout my research program. This 
 thesis would have not been possible without the generous resources provided by him, the Department of Computer Science, and Memorial University.
 
@@ -16,5 +16,5 @@ I am deeply grateful to my family who never stopped supporting me throughout all
 it was not for their unconditional support.
 
 Last but not the least, I want to thank my fellow labmates in Computer Vision Lab for the interesting ideas we shared, for all the sleepless nights we spent together before deadlines, 
-and for all the fun we had together in the last two years. Studying in Memorial University along with my peers in the department has been a great experience for me
+and for all the fun we had together in the last two years. Studying at Memorial University along with my peers in the department has been a great experience for me
 and is absolutely an unforgettable memory.
