ack commented out, abstract shortened

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -1,4 +1,4 @@
-\chapter{Background and Related Works}
+\chapter{Background and Related Work}
 \label{chap:Background}
 
 In this chapter, we introduce the relevant concepts and review the techniques used in this research.
