--- a/ThesisReport/abstract.tex
+++ b/ThesisReport/abstract.tex
@@ -5,17 +5,17 @@
 For many years, researchers have made great contributions in the fields of augmented reality (AR) and stereo vision. 
 One of the most studied aspects of stereo vision since the 1980s has been \textit{Stereo Correspondence}, which is the problem of 
 finding the corresponding pixels in stereo images, and therefore, building a disparity map.
-As a result, many methods have been proposed and implemented in order to properly address this problem. 
+As a result, many methods have been proposed and implemented to properly address this problem. 
 Due to the emergence of different techniques to solve the problem of stereo correspondence, having an evaluation scheme to assess 
 these solutions is essential. Over the past few years, different evaluation schemes have been proposed 
 by researchers in the field to provide a testbed for assessment of the solutions based on specific criteria.
-For instance, the Middlebury Stereo and the Kitti Stereo benchmarks
+Middlebury Stereo and Kitti Stereo benchmarks
 are two of the most popular and widely used evaluation systems through which a solution can be evaluated and compared 
 to others. 
 However, both of these models take a general approach towards evaluating the methods, that is, they 
 have not been designed with an eye to the particular target application.
-In our proposed approach, steps are taken towards an evaluation design based on the potential applications of stereo methods.
-Considering the target application while evaluating the methods enables us to better define the criteria for \textit{efficiency}, that is, the processing time, 
+In our proposed approach, steps are taken towards an evaluation design based on the potential applications of stereo methods, 
+which enable us to better define the criteria for \textit{efficiency}, that is, the processing time, 
 and the required \textit{accuracy} of the disparity results.
 Since AR has attracted more attention in the past few years, 
 the evaluation scheme proposed in this research is designed based on outdoor AR applications which can take advantage of
