--- a/ThesisReport/ack.tex
+++ b/ThesisReport/ack.tex
@@ -5,16 +5,16 @@
 
 \vspace{1cm}
 
-Foremost, I would like to express my sincere gratitude to my supervisor, Dr. Oscar Meruvia-Pastor, for his continuous support, motivation, and 
-kind guidance throughout my research program. This 
-thesis would have not been possible without the generous resources provided by him, the Department of Computer Science, and Memorial University.
+%Foremost, I would like to express my sincere gratitude to my supervisor, Dr. Oscar Meruvia-Pastor, for his continuous support, motivation, and 
+%kind guidance throughout my research program. This 
+%thesis would have not been possible without the generous resources provided by him, the Department of Computer Science, and Memorial University.
 
-I would like to express my heartfelt appreciation to Dr. Sam Bromley for his patience, constant encouragement, and insightful, challenging comments which compelled me to always
-do better.
+%I would like to express my heartfelt appreciation to Dr. Sam Bromley for his patience, constant encouragement, and insightful, challenging comments which compelled me to always
+%do better.
 
-I am deeply grateful to my family who never stopped supporting me throughout all my studies, even when we were far from each other. I would have never been the person I am today if 
-it was not for their unconditional support.
+%I am deeply grateful to my family who never stopped supporting me throughout all my studies, even when we were far from each other. I would have never been the person I am today if 
+%it was not for their unconditional support.
 
-Last but not the least, I want to thank my fellow labmates in Computer Vision Lab for the interesting ideas we shared, for all the sleepless nights we spent together before deadlines, 
-and for all the fun we had together in the last two years. Studying at Memorial University along with my peers in the department has been a great experience for me
-and is absolutely an unforgettable memory.
+%Last but not the least, I want to thank my fellow labmates in Computer Vision Lab for the interesting ideas we shared, for all the sleepless nights we spent together before deadlines, 
+%and for all the fun we had together in the last two years. Studying at Memorial University along with my peers in the department has been a great experience for me
+%and is absolutely an unforgettable memory.
