--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -741,7 +741,7 @@ different pixels, Figure \ref{fig:scanline}.
 
 After finding the minimum value in each image, a global minimum is sought between all the computed values from different images.
 The value we found for a group of twelve images selected from our dataset with the size of $1242\times375$ and the focal length of $721$ 
-pixels was $0.0022$ arcmins.
+pixels, as reported by Kitti stereo \cite{kitti}, was $0.0022$ arcmins.
 After finding this minimum and defining our thresholds, we apply a nearly similar operation on the disparity results of the same group of images 
 from each of the sample algorithms.
 In this process, while moving through each image, for those pixels whose generated disparity is close to the ground truth disparity, 
@@ -823,7 +823,8 @@ In Figure \ref{fig:camResolution}, $w$ is the image width and $f$ is the focal l
 \theta = \arctan(\frac{pixel\_resolution}{focal\_length})
 \end{align}
 
-For the image size of $1242\times375$ pixels and focal length of $721$ pixels, and based on the resolution of SGBM and ADCensusB in the estimation of the disparity values, 
+For the image size of $1242\times375$ pixels and focal length of $721$ pixels, 
+and based on the resolution of SGBM and ADCensusB in the estimation of the disparity values, 
 the minimum and maximum detectable disparity, that is, at the center and at the boundary of the image, respectively, 
 in terms of effective stereoacuity are as follows:
 
