last update before printing :)

--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -204,7 +204,7 @@ we leave it to the reader to judge the similarity between these images.
 \label{fig:midburydisps}
 \end{figure}
 
-Next, the set of parameters used at different steps of the evaluation are presented in the following sections.
+Next, the set of parameters used at different steps of the evaluation are presented.
 It should be noted that these parameters were kept constant for all the images and experiments. However, if a parameter is changed during an experiment for specific
 reasons, it will be explicitly mentioned in the description of the experiment.
 
@@ -625,7 +625,7 @@ The results for both cases, not refined and refined, over the masked regions and
 \caption{Refinement on disparity results}
 \label{fig:adcm3mrk}
 \end{subfigure}
-\caption{Average disparity error by ADCensusB for the masked images; Blue circles show some sample values that have slightly changed as a result of refinement}
+\caption{Average disparity error by ADCensusB for the masked images; blue circles show some sample values that have slightly changed as a result of refinement}
 \label{fig:adcMLRnoLR}
 \end{figure} 
 
@@ -645,7 +645,7 @@ The results for both cases, not refined and refined, over the masked regions and
 \caption{Refinement on disparity results}
 \label{fig:adcf3mrk}
 \end{subfigure}
-\caption{Average disparity error by ADCensusB for the whole images; Blue circles show some sample values that have slightly changed as a result of refinement}
+\caption{Average disparity error by ADCensusB for the whole images; blue circles show some sample values that have slightly changed as a result of refinement}
 \label{fig:adcFLRnoLR}
 \end{figure} 
 
