--- a/ThesisReport/abstract.tex
+++ b/ThesisReport/abstract.tex
@@ -15,7 +15,7 @@ to others.
 However, both of these models take a general approach towards evaluating the methods, that is, they 
 have not been designed with an eye to the particular target application.
 In our proposed approach, steps are taken towards an evaluation design based on the potential applications of stereo methods, 
-which enable us to better define the criteria for \textit{efficiency}, that is, the processing time, 
+which enables us to better define the criteria for \textit{efficiency}, that is, the processing time, 
 and the required \textit{accuracy} of the disparity results.
 Since AR has attracted more attention in the past few years, 
 the evaluation scheme proposed in this research is designed based on outdoor AR applications which can take advantage of
