Background epipolar geometry formula fixed, ack file also uncommented.

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -112,7 +112,7 @@ can be obtained, will be straightforward \cite{sze11}. This relation is presente
 
 \begin{align}
 \frac{X_{L}}{Z} &= \frac{x_{l}}{f} \label{eq:1} \\
-\frac{-X_{R}}{Z} &= -\frac{x_{r}}{f}  \Rightarrow B-\frac{X_{L}}{Z}=-\frac{x_{r}}{f} \label{eq:2} \\
+\frac{-X_{R}}{Z} &= -\frac{x_{r}}{f}  \Rightarrow \frac{B-X_{L}}{Z}=-\frac{x_{r}}{f} \label{eq:2} \\
 (\ref{eq:1}) + (\ref{eq:2}) \Longrightarrow  \frac{B}{Z} &= \frac{x_{l}-x_{r}}{f} \label{eq:3} \\
 \intertext{if $x_{l}-x_{r}=d$, we will have:}
 d &= \frac{Bf}{Z} \label{eq:dispeq}
