--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -124,7 +124,7 @@ and right images according to disparity {\it d} is also as follows:
 {P}^{"}_{x} &= {P}^{'}_{x}+d(x,y) \\
 {P}^{"}_{y} &= {P}^{'}_{y}
 \end{align}
-Therefore, based on the aforementioned formulas, the depth of points in 3D space can be easily calculated after finding the corresponding pixels in multiple views and consequently their
+where $d(x,y)$ is the disparity function. Therefore, based on the aforementioned formulas, the depth of points in 3D space can be easily calculated after finding the corresponding pixels in multiple views and consequently their
 disparities \cite{bol87,oku93,sch02}.
 
 \section{Stereo Correspondence Algorithms}
@@ -259,7 +259,7 @@ The Gaussian filter is a filter commonly used for attenuating higher frequencies
 Since edges in an image may be oriented along any arbitrary direction, 
 applying a filter which is biased towards a particular direction in filtering out the noise, would not be a prudent decision. Instead, a better choice would be choosing a filter 
 with a symmetric 2D kernel function. 
-This feature is particularly found in the Gaussian filter, since it employs a 2D symmetric kernel. Because of this unique feature, 
+This feature can particularly be found in the Gaussian filter, since it employs a 2D symmetric kernel. Because of this unique feature, 
 the Gaussian filter is normally used in most edge detection algorithms as a pre-processing step.
 An isotropic, i.e. circularly symmetric, the Gaussian kernel has the following form \cite{sze11}:
 
