--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -47,7 +47,7 @@ In an augmented reality system, there are certain factors that would affect the 
 should be carefully considered when designing and evaluating the system.
 These factors, which correspond to different components of an AR system, are related to the surrounding 
 environment, human factors in AR, or technology and hardware constraints.
-Figure \ref{fig:AR} illustrates a high level architecture of an AR system with its key components.
+Figure \ref{fig:AR} illustrates a high level architecture of our ultimate AR system with its key components.
 
 \begin{figure}[H]
 \centering
@@ -287,8 +287,8 @@ similar to the histogram constructed in the the previous step.
 \end{alltt}
 
 \section{Platform}
-The evaluation system was implemented on a Linux platform with Intel Core(TM) i7 3.20GHz CPU. 
-We have used C++ as the high level language for implementing 
+The evaluation system was implemented on a Linux platform, Ubuntu 12.04 distribution, with Intel Core(TM) i7 3.20GHz CPU. 
+We have used g++ as the compiler and C++ as the high level language for implementing 
 the core functions within the system, such as the main evaluation function, 
 the masking process, and the other fundamental operations that are the building blocks of the system.
 Furthermore, the Tool Command Language (TCL) has been used for all the scripts that wrap around the C++ functions,
