--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -89,8 +89,8 @@ In fact, our fundamental research question is: \newline
 \textbf{``Can the combination of stereo matching techniques with augmented reality meet the requirements of an AR system in outdoor 
 environments?''} \newline
 \end{quote}
-
-In order to find the answer to this question, some other questions are raised:
+\noindent
+In order to find the answer to this question, we have been intrigued to further investigate the following questions:
 \begin{quote}
 \textbf {``How does the human visual system (HVS) perceive depth?''}\newline
 \textbf {``What is the standard angular disparity for the human visual system and how would it affect an AR system?''} \newline
