Oscar's comments applied to system chap

--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -287,7 +287,8 @@ similar to the histogram constructed in the the previous step.
 \end{alltt}
 
 \section{Platform}
-The evaluation system was implemented on a Linux platform, Ubuntu 12.04 distribution, with 12GB RAM and Intel Core(TM) i7 960 3.20GHz CPU. 
+The evaluation system was implemented on a Linux platform, Ubuntu 12.04 distribution, with 12GB RAM and Intel Core(TM) i7 960 3.20GHz CPU. No optimizations 
+have been used in the evaluation. 
 We have used g++ as the compiler and C++ as the high level language for implementing 
 the core functions within the system, such as the main evaluation function, 
 the masking process, and the other fundamental operations that are the building blocks of the system.
