--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -47,12 +47,12 @@ In an augmented reality system, there are certain factors that would affect the 
 should be carefully considered when designing and evaluating the system.
 These factors, which correspond to different components of an AR system, are related to the surrounding 
 environment, human factors in AR, or technology and hardware constraints.
-Figure \ref{fig:AR} illustrates a high level architecture of our ultimate AR system with its key components.
+Figure \ref{fig:AR} illustrates the key components of a high level design we propose for a stereoscopic AR system.
 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.75]{AR}
-\caption{High-level architecture of an AR system}
+\caption{Proposed design of the high-level architecture of a stereoscopic AR system}
 \label{fig:AR}
 \end{figure} 
 
