--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -481,3 +481,14 @@
 	        publisher={IEEE}
 		}
 
+@article{milg94,
+  title={A taxonomy of mixed reality visual displays},
+  author={Milgram, Paul and Kishino, Fumio},
+  journal={IEICE TRANSACTIONS on Information and Systems},
+  volume={77},
+  number={12},
+  pages={1321--1329},
+  year={1994},
+  publisher={The Institute of Electronics, Information and Communication Engineers}
+}
+}
