--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -127,7 +127,7 @@ and right images according to disparity {\it d} is also as follows:
 {P}^{"}_{x} &= {P}^{'}_{x}+d(x,y) \\
 {P}^{"}_{y} &= {P}^{'}_{y}
 \end{align}
-where $d(x,y)$ is the disparity function which, as mentioned earlier, indicates the transformation between the corresponding pixelS in the stereo images. Therefore, based on the aforementioned formulas, the depth of points in 3D space can be easily calculated after finding the corresponding pixels in multiple views and consequently their
+where $d(x,y)$ is the disparity function which, as mentioned earlier, indicates the transformation between the corresponding pixels in the stereo images. Therefore, based on the aforementioned formulas, the depth of points in 3D space can be easily calculated after finding the corresponding pixels in multiple views and consequently their
 disparities \cite{bol87,oku93,sch02}.
 
 \section{Stereo Correspondence Algorithms}
