--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -3,7 +3,7 @@
 
 Augmented reality (AR) systems combine standard video inputs with computer-generated objects and
 usually provide real-time interaction for the users. 
-In general, an augmented reality system can be defined with the following properties \cite{azuma01} :
+In general, an augmented reality system can be defined with the following properties \cite{azuma01,milg94} :
 \begin{itemize}
 \item Combination of real and virtual environment
 \item Registration (alignment) of real and virtual objects
@@ -30,7 +30,7 @@ we can refer to:
 \section{Image Registration in Augmented Reality}
 AR systems overlay 2D or 3D virtual objects on real scenes. Therefore, depending on the application, certain accuracy is required for 
 registration of the virtual and real objects in the scene, for which certain knowledge of the location of the user and different objects 
-is essential \cite{azuma01}.
+is essential \cite{azuma01,milg94}.
 In an AR system, different techniques can be used to 
 obtain the user's location and the position of other objects in the environment. In many AR systems, fiducial markers are used
 in the environment with computer vision tracking methods to find the actual position of the objects within the scene. This method, however, is 
@@ -90,7 +90,7 @@ In fact, our fundamental research question is: \newline
 environments?''} \newline
 \end{quote}
 \noindent
-In order to find the answer to this question, we have been intrigued to further investigate the following questions:
+To provide an informed answer to the previous question, we believe that the following more fundamental questions need to be answered first:  
 \begin{quote}
 \textbf {``How does the human visual system (HVS) perceive depth?''}\newline
 \textbf {``What is the standard angular disparity for the human visual system and how would it affect an AR system?''} \newline
